generate prepare